objects/SIP_master__c.object
<CustomObject>
    <description>object related to the SIP object to store some common master data  like payout% per region or texts for the different templates</description>
    <fields>
        <fullName>Annual_Maximum_Incentive__c</fullName>
        <description>shows the maximum payout % value of the annual base salary</description>
        <label>Annual Maximum Incentive %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Conversion_Payout_FE__c</fullName>
        <formula>Payout_Percent__c  * 0.4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversion Payout FE %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Conversion_Payout_SM_Percent__c</fullName>
        <formula>Payout_Percent__c  * 0.15</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversion Payout SM %</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Exceptional_Performance_Payout_Dollar__c</fullName>
        <defaultValue>25</defaultValue>
        <description>the maximum payout on Exceptional Perfromance in USD for AM and FE in the US  to compose the SIP letters</description>
        <label>Exceptional Performance Payout k$</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exceptional_Performance_Payout_Percent__c</fullName>
        <formula>Payout_Percent__c  * 0.25</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exceptional Performance Payout %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Industrial_Performance_Result__c</fullName>
        <description>shows the result of the Industrial performance, during the year it&apos;s the current status</description>
        <label>Industrial Performance Result</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Payment_Schedule_Text__c</fullName>
        <description>text field for the varaible elements in the SIP letter for Payment schedule</description>
        <label>Payment Schedule Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payout_Dollar__c</fullName>
        <defaultValue>100</defaultValue>
        <description>shows the max $payout for employees in the US under AM and FE SIP plan. Used to compose the SIP letters</description>
        <label>Payout k$</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payout_Percent__c</fullName>
        <description>shows the  the payout % of the annual salary</description>
        <label>Payout %</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Performance_Payout_AM_Percent__c</fullName>
        <formula>Payout_Percent__c  * 0.5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Performance Payout AM %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pipeline_Payout_FE_Percent__c</fullName>
        <formula>Payout_Percent__c  * 0.1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pipeline Payout FE %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rev_Perf_Payout_SM_Percent__c</fullName>
        <formula>Payout_Percent__c  * 0.35</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rev Perf Payout SM %</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Termination_Text__c</fullName>
        <description>text field for the variable Text elements in a SIP letter for the termination clause</description>
        <label>Termination Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SIP master</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_2014</fullName>
        <columns>NAME</columns>
        <columns>Industrial_Performance_Result__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>FY15</value>
        </filters>
        <label>All 2014</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_2015</fullName>
        <columns>NAME</columns>
        <columns>Industrial_Performance_Result__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>FY15</value>
        </filters>
        <label>All 2015</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_2016</fullName>
        <columns>NAME</columns>
        <columns>Industrial_Performance_Result__c</columns>
        <columns>Conversion_Payout_FE__c</columns>
        <columns>Performance_Payout_AM_Percent__c</columns>
        <columns>Payout_Percent__c</columns>
        <columns>Exceptional_Performance_Payout_Percent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>FY16</value>
        </filters>
        <label>All 2016</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_2017</fullName>
        <columns>NAME</columns>
        <columns>Industrial_Performance_Result__c</columns>
        <columns>Conversion_Payout_FE__c</columns>
        <columns>Performance_Payout_AM_Percent__c</columns>
        <columns>Payout_Percent__c</columns>
        <columns>Exceptional_Performance_Payout_Percent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>FY17</value>
        </filters>
        <label>All 2017</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_2018</fullName>
        <columns>NAME</columns>
        <columns>Conversion_Payout_FE__c</columns>
        <columns>Performance_Payout_AM_Percent__c</columns>
        <columns>Payout_Percent__c</columns>
        <columns>Exceptional_Performance_Payout_Percent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>FY18</value>
        </filters>
        <label>All 2018</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>SIP master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SIP masters</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>